[package]
name = "swfextract"
version = "0.1.0"
edition = "2021"

[dependencies]
bitstream-io = { version = "1.6" }
clap = { version = "4.2", features = ["derive"] }
flate2 = { version = "1.0" }
gif = { version = "0.12" }
jpeg-decoder = { version = "0.3" }
png = { version = "0.17" }
swf = { version = "0.2" }
sxd-document = { version = "0.3" }
